# inOneWeekend

./: .clang-format  .gitignore  conanfile.txt
include/: Hittable.hh  HittableList.hh  Sphere.hh  color.hh  ray.hh
src/: CMakeLists.txt  Hittable.cc  HittableList.cc  Sphere.cc  color.cc  main.cc  ray.cc
test/: CMakeLists.txt
